# cube-solver

./: .gitignore  ANDROID_BUILD.md  CLAUDE.md  Cargo.toml  Dioxus.toml  Dockerfile  Dockerfile.linux-build  IOS_BUILD.md  LINUX_BUILD.md  PROJECT_COMPLETE.md  WINDOWS_BUILD.md  bootstrap-autonomous-claude.sh  build-android.sh  build-ios.sh  build-linux.sh  build-windows.ps1  damonnator.sh  docker-compose.yml  prd.json  progress.txt  progress_to_append.txt  test-plan.md  test_scramble_debug.rs
assets/: main.css
mobile/android/: README.md
mobile/ios/: README.md
src/: lib.rs  main.rs
src/camera/: calibration.rs  capture.rs  color_detect.rs  mod.rs
src/components/: camera_scanner.rs  color_calibration.rs  color_picker.rs  cube_3d.rs  cube_controls.rs  cube_input.rs  mod.rs  move_display.rs  scan_correction.rs  scan_workflow.rs  solution_player.rs  ui_kit.rs  validation_feedback.rs
src/cube/: mod.rs  moves.rs  notation.rs  scramble.rs  state.rs  validation.rs
src/input/: mod.rs  touch.rs
src/renderer/: animations.rs  camera.rs  cube_mesh.rs  highlight.rs  mod.rs  wgpu_context.rs
src/solver/: beginner_3x3.rs  kociemba.rs  mod.rs  parity.rs  reduction.rs  solution.rs  two_by_two.rs
src/state/: history.rs  mod.rs  progress.rs
src/styles/: responsive.css
src/tutorial/: mod.rs  practice.rs
src/tutorial/lessons/: colors.rs  cross.rs  f2l_corners.rs  f2l_edges.rs  four_by_four.rs  mod.rs  notation.rs  oll.rs  pll.rs  two_by_two.rs
tests/: android_build_tests.rs  animation_tests.rs  calibration_tests.rs  camera_capture_tests.rs  camera_scanner_tests.rs  camera_tests.rs  color_confidence_tests.rs  color_detection_tests.rs  color_picker_tests.rs  colors_lesson_tests.rs  corners_lesson_tests.rs  cross_lesson_tests.rs  cube_controls_tests.rs  cube_input_tests.rs  cube_tests.rs  edge_pairing_tests.rs  four_by_four_lesson_tests.rs  highlight_tests.rs  history_integration_tests.rs  ios_build_tests.rs  lighting_tests.rs  linux_build_tests.rs  move_display_tests.rs  move_tests.rs  notation_lesson_tests.rs  notation_tests.rs  oll_lesson_tests.rs  parity_tests.rs  pll_lesson_tests.rs  practice_mode_tests.rs  progress_tests.rs  reduction_solver_tests.rs  responsive_layout_tests.rs  responsive_tests.rs  rotation_tests.rs  scan_correction_tests.rs  scan_workflow_tests.rs  scramble_tests.rs  second_layer_lesson_tests.rs  serialization_tests.rs  (+15 more)
web/: index.html
web/pkg/: rubiks-cube-solver.d.ts  rubiks-cube-solver.js  rubiks-cube-solver_bg.wasm  rubiks-cube-solver_bg.wasm.d.ts
