[package]
name = "rubiks-cube-solver"
version = "0.1.0"
authors = ["Rubik's Cube Solver Team"]
edition = "2021"
description = "Educational Rubik's cube solver app for kids supporting 2x2 to 20x20 cubes"

[dependencies]
dioxus = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
wgpu = "22.1"
winit = "0.30"
pollster = "0.3"
glam = "0.30.10"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]

[lib]
name = "rubiks_cube_solver"
path = "src/lib.rs"
