[package]
name = "rubiks-cube-solver"
version = "0.1.0"
authors = ["Rubik's Cube Solver Team"]
edition = "2021"
description = "Educational Rubik's cube solver app for kids supporting 2x2 to 20x20 cubes"

[dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
wgpu = { version = "22.1", optional = true }
winit = { version = "0.30", optional = true }
pollster = { version = "0.3", optional = true }
glam = "0.30.10"
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["desktop_3d"]
desktop_3d = ["wgpu", "winit", "pollster"]

[dev-dependencies]

[lib]
name = "rubiks_cube_solver"
path = "src/lib.rs"
